--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "illuminate/support": "^8.0 || ^9.0 || ^10.0",
         "illuminate/contracts": "^8.0 || ^9.0 || ^10.0",
-        "jucloud/easy-organization": "dev-master"
+        "jucloud/easy-organization": "^1.0"
     },
     "require-dev": {
         "laravel/framework": "^8.0 || ^9.0 || ^10.0",
